<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.animaldb.AnimalView" >

    <TextView
        android:id="@+id/lblANI_DTM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtANI_DTM_VIEW"
        android:layout_alignLeft="@+id/lblANI_COUNT"
        android:text="@string/ani_dtm" />

    <Spinner
        android:id="@+id/cboANI_CODE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtANI_COM_VIEW"
        android:background="#1e1615" />

    <EditText
        android:id="@+id/txtANI_TYPE_CD_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblANI_TYPE_CD"
        android:layout_alignBottom="@+id/lblANI_TYPE_CD"
        android:layout_alignLeft="@+id/txtANI_ID_VIEW"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/lblANI_COUNT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtANI_COUNT_VIEW"
        android:layout_alignBottom="@+id/txtANI_COUNT_VIEW"
        android:layout_alignLeft="@+id/lblANI_COM"
        android:text="@string/ani_count" />

    <TextView
        android:id="@+id/lblANI_ID_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtANI_TYPE_CD_VIEW"
        android:layout_alignLeft="@+id/lblANI_COUNT"
        android:layout_marginBottom="17dp"
        android:text="@string/ani_id" />

    <EditText
        android:id="@+id/txtANI_ID_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtANI_COUNT_VIEW"
        android:layout_alignTop="@+id/lblANI_ID_VIEW"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/lblANI_COM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/ani_com" />

    <EditText
        android:id="@+id/txtANI_COM_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblANI_COM"
        android:layout_alignBottom="@+id/lblANI_COM"
        android:layout_alignLeft="@+id/txtANI_DTM_VIEW"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtANI_DTM_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtANI_COM_VIEW"
        android:layout_toRightOf="@+id/lblANI_COM"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/lblANI_TYPE_CD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtANI_COUNT_VIEW"
        android:layout_alignLeft="@+id/lblANI_ID_VIEW"
        android:layout_marginBottom="28dp"
        android:text="@string/ani_nm" />

    <EditText
        android:id="@+id/txtANI_COUNT_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtANI_DTM_VIEW"
        android:layout_toRightOf="@+id/lblANI_COM"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/lblLoc_lat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtANI_COM_VIEW"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/lblLoc_lng2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblLoc_lat2"
        android:layout_below="@+id/lblLoc_lat2"
        android:layout_marginTop="36dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/lblLoc_Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblLoc_lat2"
        android:layout_alignBottom="@+id/lblLoc_lat2"
        android:layout_alignLeft="@+id/lblANI_COM"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/lblLoc_lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblLoc_lng2"
        android:layout_toLeftOf="@+id/txtANI_COM_VIEW"
        android:text="@string/longitude" />

</RelativeLayout>
